--- a/src/components/Nav.astro
+++ b/src/components/Nav.astro
@@ -1,4 +1,4 @@
-<nav class="fixed z-50 flex w-full max-w-screen-lg justify-between px-4">
+<nav class="fixed z-50 flex w-full max-w-screen-lg justify-between p-4">
   <a href="/">Home</a>
   <a>Contact</a>
 </nav>
