--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -1,10 +1,21 @@
 ---
 import Layout from "../layouts/Layout.astro";
+import HomeSvg from "../components/HomeSvg.astro";
+
+const colors = {
+  typescript: "#3178C6",
+  javascript: "#F7DF1E",
+  html: "#E34F26",
+  css: "#1572B6",
+  sass: "#CC6699",
+  react: "#61DAFB",
+  nextjs: "#000000",
+};
 ---
 
 <Layout title="Welcome to Astro.">
   <main
-    class="relative z-0 grid h-full w-full max-w-screen-lg grid-rows-[350px,100px] content-center overflow-hidden"
+    class="relative z-0 grid h-full max-h-[800px] w-full max-w-screen-lg grid-rows-[350px,100px] content-center overflow-hidden"
   >
     <section
       class="row-start-1 flex flex-col items-center gap-5 self-end text-center"
@@ -41,14 +52,48 @@ import Layout from "../layouts/Layout.astro";
 
     <section class="row-start-2 flex items-end justify-center">
       <div class="grid w-40 grid-cols-7 justify-items-center gap-2">
-        <div class="aspect-square w-full rounded-full bg-red-500"></div>
-        <div class="aspect-square w-full rounded-full bg-blue-500"></div>
-        <div class="aspect-square w-full rounded-full bg-green-300"></div>
-        <div class="aspect-square w-full rounded-full bg-purple-500"></div>
-        <div class="aspect-square w-full rounded-full bg-yellow-400"></div>
-        <div class="aspect-square w-full rounded-full bg-teal-400"></div>
-        <div class="aspect-square w-full rounded-full bg-pink-400"></div>
+        <div
+          class="aspect-square w-full rounded-full bg-red-500"
+          style={`background: ${colors.html}`}
+        >
+        </div>
+        <div
+          class="aspect-square w-full rounded-full"
+          style={`background: ${colors.typescript}`}
+        >
+        </div>
+        <div
+          class="aspect-square w-full rounded-full bg-green-300"
+          style={`background: ${colors.javascript}`}
+        >
+        </div>
+        <div
+          class="aspect-square w-full rounded-full bg-purple-500"
+          style={`background: ${colors.nextjs}`}
+        >
+        </div>
+        <div
+          class="aspect-square w-full rounded-full bg-yellow-400"
+          style={`background: ${colors.react}`}
+        >
+        </div>
+        <div
+          class="aspect-square w-full rounded-full bg-teal-400"
+          style={`background: ${colors.sass}`}
+        >
+        </div>
+        <div
+          class="aspect-square w-full rounded-full bg-pink-400"
+          style={`background: ${colors.css}`}
+        >
+        </div>
       </div>
+    </section>
+
+    <section
+      class="absolute -z-10 row-span-2 row-start-1 h-full w-[1024px] max-w-5xl justify-self-center overflow-hidden"
+    >
+      <HomeSvg />
     </section>
   </main>
 </Layout>
