Updated HomeSvg component

--- a/src/components/HomeSvg.astro
+++ b/src/components/HomeSvg.astro
@@ -1,226 +1,229 @@
 <svg
-  width="1024"
-  height="729"
-  viewBox="0 0 1024 729"
+  width="803"
+  height="505"
+  viewBox="0 0 803 505"
   fill="none"
   xmlns="http://www.w3.org/2000/svg"
 >
-  <g id="Svg group">
-    <g id="HTML">
+  <g id="HomeSVG">
+    <g id="Css">
       <path
         class="Line"
-        d="M440 669.5C440 669.5 440 532 440 456C440 363.5 246.5 276.5 246.5 276.5"
-        stroke="#E34F26"
+        d="M475 446C486 329.5 664 267.5 664 267.5"
+        stroke="#1572B6"
         stroke-width="5"
         stroke-linecap="round"
         pathLength="1"></path>
       <path
         class="LineCover"
-        d="M440 669.5C440 669.5 440 532 440 456C440 363.5 246.5 276.5 246.5 276.5"
+        d="M475 446C486 329.5 664 267.5 664 267.5"
         stroke="#F3F4F6"
         stroke-width="10"
         stroke-linecap="round"
         pathLength="1"></path>
       <path
         class="Part1"
-        d="M246.5 273.5L242.628 239.139C242.56 238.536 241.977 238.132 241.389 238.281L202.11 248.219C201.523 248.368 201.201 249 201.428 249.562L215.271 283.931C215.412 284.28 215.736 284.521 216.111 284.554L232.15 285.969C232.376 285.989 232.603 285.931 232.792 285.805L243 279"
-        stroke="#E34F26"
+        d="M666.5 264L669.882 231.151C669.944 230.544 670.53 230.134 671.122 230.284L710.39 240.219C710.977 240.368 711.299 241 711.072 241.562L697.229 275.931C697.088 276.28 696.764 276.521 696.389 276.554L680.356 277.969C680.126 277.989 679.896 277.929 679.705 277.799L669 270.5"
+        stroke="#1572B6"
         stroke-width="5"
         stroke-linecap="round"
         pathLength="1"></path>
       <path
         class="Part2"
-        d="M233.5 251L216.611 255.222C216.024 255.369 215.7 256.001 215.925 256.564L219.181 264.702C219.364 265.161 219.855 265.417 220.337 265.305L233.397 262.257C233.983 262.121 234.556 262.528 234.619 263.127L235.435 270.884C235.475 271.261 235.298 271.629 234.978 271.832L230.246 274.844C230.085 274.946 229.899 275 229.709 275H223.566C223.215 275 222.889 274.816 222.709 274.514L221.5 272.5"
-        stroke="#E34F26"
+        d="M679 243L697.24 247.437C697.33 247.459 697.345 247.58 697.263 247.623L683.224 254.884C683.143 254.926 683.155 255.044 683.242 255.069L693.392 257.969C693.45 257.986 693.48 258.048 693.457 258.103L690.024 266.443C690.009 266.478 689.976 266.502 689.938 266.504L683.031 266.998C683.011 266.999 682.991 266.995 682.973 266.984L677.05 263.529C677.019 263.511 677 263.478 677 263.443V261.5"
+        stroke="#1572B6"
         stroke-width="5"
         stroke-linecap="round"
         pathLength="1"></path>
     </g>
-
-    <g id="Typescript">
+    <g id="Sass">
       <path
         class="Line"
-        d="M464 670C464 670 464 532.5 464 456.5C464 364 176 171.5 176 171.5"
-        stroke="#3178C6"
+        d="M451 446C464 241 748 134 748 134"
+        stroke="#CC6699"
         stroke-width="5"
         stroke-linecap="round"
         pathLength="1"></path>
       <path
         class="LineCover"
-        d="M464 670C464 670 464 532.5 464 456.5C464 364 176 171.5 176 171.5"
+        d="M451 446C464 241 748 134 748 134"
         stroke="#F3F4F6"
         stroke-width="10"
         stroke-linecap="round"
         pathLength="1"></path>
       <path
         class="Part1"
-        d="M175.099 169.835L166.991 131.687C166.417 128.986 163.761 127.262 161.06 127.836L123.891 135.737C121.19 136.311 119.465 138.966 120.04 141.667L127.94 178.836C128.514 181.538 131.169 183.262 133.87 182.688L171.04 174.787"
-        stroke="#3178C6"
+        d="M751.138 130.897C760.412 121.422 775.419 121.11 785.079 130.19C795.04 139.552 795.015 155.446 785.15 164.909C775.48 174.184 760.27 173.936 751.138 164.131C743.469 155.897 743 146.5 746.5 138"
+        stroke="#CC6699"
         stroke-width="5"
         stroke-linecap="round"
         pathLength="1"></path>
       <path
         class="Part2"
-        d="M148.346 171.432L145.019 155.781M145.019 155.781L139.64 156.925M145.019 155.781L150.399 154.638M163.916 153.298C155.54 149.967 152.625 160.299 160.866 160.592C169.211 161.374 166.888 172.091 158.305 167.781"
-        stroke="#3178C6"
+        d="M769.001 144C777.5 143 779.5 143.5 781 140.5C783.5 135.5 761.475 130 759 142C757.87 147.476 766.608 151.144 765.001 156.5C763.5 161.5 755.674 159.645 757 155.5C762.5 146.5 777.5 154 771.501 159.5"
+        stroke="#CC6699"
         stroke-width="5"
         stroke-linecap="round"
         pathLength="1"></path>
     </g>
-
-    <g id="Javascript">
+    <g id="React">
       <path
         class="Line"
-        d="M488 670C488 670 488 532.638 488 456.714C488 364.307 353.5 68 353.5 68"
-        stroke="#F7DF1E"
+        d="M427 446C427 200 566 46.5 566 46.5"
+        stroke="#61DAFB"
         stroke-width="5"
         stroke-linecap="round"
         pathLength="1"></path>
       <path
         class="LineCover"
-        d="M488 670C488 670 488 532.638 488 456.714C488 364.307 353.5 68 353.5 68"
+        d="M427 446C427 200 566 46.5 566 46.5"
         stroke="#F3F4F6"
         stroke-width="10"
         stroke-linecap="round"
         pathLength="1"></path>
       <path
         class="Part1"
-        d="M353 64.5L352.033 30.1579C352.015 29.5478 351.46 29.0952 350.859 29.2013L310.632 36.3002C310.034 36.4058 309.667 37.0158 309.855 37.5935L321.308 72.9095C321.426 73.2711 321.738 73.535 322.114 73.5903L338.179 75.9528C338.388 75.9835 338.601 75.9475 338.787 75.8501L350 70"
-        stroke="#F7DF1E"
+        d="M567.5 44C567.5 44 585.5 20.5001 595.5 26.4999C600 29.5001 595.5 40.4998 595.5 40.4998M576 35.9402C576 35.9402 605.351 39.7787 605.155 51.4389C604.807 56.836 593.031 58.4388 593.031 58.4388M587 40C587 40 598.351 67.3384 588.155 72.9988C583.307 75.3958 576.031 65.9988 576.031 65.9988M589 51C589 51 571 74.4999 561 68.5001C556.5 65.4999 561 54.5002 561 54.5002M581.005 57.9807C581.005 57.9807 551.653 54.1422 551.849 42.482C552.197 37.0849 563.973 35.4821 563.973 35.4821M570.005 55.2209C570.005 55.2209 558.653 27.8825 568.849 22.2222C573.697 19.8252 580.973 29.2222 580.973 29.2222"
+        stroke="#61DAFB"
         stroke-width="5"
         stroke-linecap="round"
         pathLength="1"></path>
       <path
         class="Part2"
-        d="M320.5 45.5L328.002 44.1761C328.551 44.0792 329.073 44.45 329.163 45.0002L332.22 63.7806C332.344 64.5426 331.595 65.1518 330.874 64.8747L326 63M344.5 41L337.928 42.3145C337.407 42.4186 337.059 42.9111 337.134 43.4365L338.368 52.0725C338.442 52.5942 338.909 52.9686 339.434 52.9281L343.923 52.5828C344.504 52.5381 345 52.9974 345 53.5799V61.2792C345 61.7097 344.725 62.0918 344.316 62.2279L339 64"
-        stroke="#F7DF1E"
-        stroke-width="5"
+        d="M578.501 45.4999C579.5 45 581 45.4999 581 47C581 48.5 580 49.4999 578.501 49.4999C577.001 49.4999 576 48.9999 576 47C576 45.4999 578.501 44 580.125 45.5"
+        stroke="#61DAFB"
+        stroke-width="6"
         stroke-linecap="round"
         pathLength="1"></path>
     </g>
-
     <g id="NextJS">
       <path
         class="Line"
-        d="M512 670C512 670 512 532.638 512 456.714C512 364.307 505 46 505 46"
+        d="M403 446C403 353.593 396 38 396 38"
         stroke="black"
         stroke-width="5"
         stroke-linecap="round"
         pathLength="1"></path>
       <path
         class="LineCover"
-        d="M512 670C512 670 512 532.638 512 456.714C512 364.307 505 46 505 46"
+        d="M403 446C403 353.593 396 38 396 38"
         stroke="#F3F4F6"
         stroke-width="10"
         stroke-linecap="round"
         pathLength="1"></path>
       <path
         class="Part1"
-        d="M505 42.999V27.6258C505 27.431 505.247 27.3471 505.36 27.5059C507.472 30.4759 518.374 45.7904 524.817 54.5701C525.177 55.0608 525.004 55.7664 524.458 56.0355C497.928 69.1129 476.336 35.2615 497 17.0003C517.934 -1.49949 549 24.9997 531.5 50.0001"
-        stroke="#000000"
+        d="M396 34.999V19.6258C396 19.431 396.247 19.3471 396.36 19.5059C398.472 22.4759 409.374 37.7904 415.817 46.5701C416.177 47.0608 416.004 47.7664 415.458 48.0355C388.928 61.1129 367.336 27.2615 388 9.00025C408.934 -9.49949 440 16.9997 422.5 42.0001"
+        stroke="black"
         stroke-width="5"
         stroke-linecap="round"
         pathLength="1"></path>
       <path
         class="Part2"
-        d="M521 27.5V35.5"
-        stroke="#000000"
+        d="M412 19.5V27.5"
+        stroke="black"
         stroke-width="5"
         stroke-linecap="round"
         pathLength="1"></path>
     </g>
-
-    <g id="React">
+    <g id="Javascript">
       <path
         class="Line"
-        d="M535.5 670C535.5 670 535.5 533.844 535.5 457.92C535.5 365.513 675 54.5 675 54.5"
-        stroke="#61DAFB"
+        d="M379 446C379 214.5 244.5 60 244.5 60"
+        stroke="#F7DF1E"
         stroke-width="5"
         stroke-linecap="round"
         pathLength="1"></path>
       <path
         class="LineCover"
-        d="M535.5 670C535.5 670 535.5 533.844 535.5 457.92C535.5 365.513 675 54.5 675 54.5"
+        d="M379 446C379 214.5 244.5 60 244.5 60"
         stroke="#F3F4F6"
         stroke-width="10"
         stroke-linecap="round"
         pathLength="1"></path>
       <path
         class="Part1"
-        d="M676.5 52C676.5 52 694.5 28.5001 704.5 34.4999C709 37.5001 704.5 48.4998 704.5 48.4998M685 43.9402C685 43.9402 714.351 47.7787 714.155 59.4389C713.807 64.836 702.031 66.4388 702.031 66.4388M696 48C696 48 707.351 75.3384 697.155 80.9988C692.307 83.3958 685.031 73.9988 685.031 73.9988M698 59C698 59 680 82.4999 670 76.5001C665.5 73.4999 670 62.5002 670 62.5002M690.005 65.9807C690.005 65.9807 660.653 62.1422 660.849 50.482C661.197 45.0849 672.973 43.4821 672.973 43.4821M679.005 63.2209C679.005 63.2209 667.653 35.8825 677.849 30.2222C682.697 27.8252 689.973 37.2222 689.973 37.2222"
-        stroke="#61DAFB"
+        d="M244 56.5L243.033 22.1579C243.015 21.5478 242.46 21.0952 241.859 21.2013L201.632 28.3002C201.034 28.4058 200.667 29.0158 200.855 29.5935L212.308 64.9095C212.426 65.2711 212.738 65.535 213.114 65.5903L229.179 67.9528C229.388 67.9835 229.601 67.9475 229.787 67.8501L241 62"
+        stroke="#F7DF1E"
         stroke-width="5"
         stroke-linecap="round"
         pathLength="1"></path>
       <path
         class="Part2"
-        d="M687.501 53.4999C688.5 53 690 53.4999 690 55C690 56.5 689 57.4999 687.501 57.4999C686.001 57.4999 685 56.9999 685 55C685 53.4999 687.501 52 689.125 53.5"
-        stroke="#61DAFB"
-        stroke-width="6"
+        d="M211.5 37.5L219.002 36.1761C219.551 36.0792 220.073 36.45 220.163 37.0002L223.22 55.7806C223.344 56.5426 222.595 57.1518 221.874 56.8747L217 55M235.5 33L228.928 34.3145C228.407 34.4186 228.059 34.9111 228.134 35.4365L229.368 44.0725C229.442 44.5942 229.909 44.9686 230.434 44.9281L234.923 44.5828C235.504 44.5381 236 44.9974 236 45.5799V53.2792C236 53.7097 235.725 54.0918 235.316 54.2279L230 56"
+        stroke="#F7DF1E"
+        stroke-width="5"
         stroke-linecap="round"
         pathLength="1"></path>
     </g>
-
-    <g id="Sass">
+    <g id="Typescript">
       <path
         class="Line"
-        d="M560 669.794C560 669.794 560 533.638 560 457.714C560 365.307 857 142 857 142"
-        stroke="#CC6699"
+        d="M355 446C355 264 67 163.5 67 163.5"
+        stroke="#3178C6"
         stroke-width="5"
         stroke-linecap="round"
         pathLength="1"></path>
       <path
         class="LineCover"
-        d="M560 669.794C560 669.794 560 533.638 560 457.714C560 365.307 857 142 857 142"
+        d="M355 446C355 264 67 163.5 67 163.5"
         stroke="#F3F4F6"
         stroke-width="10"
         stroke-linecap="round"
         pathLength="1"></path>
       <path
         class="Part1"
-        d="M860.138 138.897C869.412 129.422 884.419 129.109 894.079 138.189C904.04 147.552 904.015 163.446 894.15 172.908C884.48 182.184 869.27 181.936 860.138 172.131C852.469 163.896 852 154.5 855.5 146"
-        stroke="#CC6699"
+        d="M66.0992 161.835L57.9906 123.687C57.4165 120.986 54.7614 119.262 52.0603 119.836L14.8907 127.737C12.1897 128.311 10.4654 130.966 11.0396 133.667L18.9402 170.837C19.5143 173.538 22.1694 175.262 24.8705 174.688L62.0401 166.787"
+        stroke="#3178C6"
         stroke-width="5"
         stroke-linecap="round"
         pathLength="1"></path>
       <path
         class="Part2"
-        d="M878.001 152C886.5 151 888.5 151.5 890 148.5C892.5 143.5 870.475 138 868 150C866.87 155.476 875.608 159.144 874.001 164.5C872.5 169.5 864.674 167.645 866 163.5C871.5 154.5 886.5 162 880.501 167.5"
-        stroke="#CC6699"
+        d="M39.3465 163.432L36.0199 147.782M36.0199 147.782L30.6401 148.925M36.0199 147.782L41.3998 146.638M54.9166 145.299C46.541 141.967 43.6254 152.299 51.8664 152.592C60.2113 153.374 57.8888 164.091 49.3052 159.782"
+        stroke="#3178C6"
         stroke-width="5"
         stroke-linecap="round"
         pathLength="1"></path>
     </g>
-
-    <g id="Css">
+    <g id="HTML">
       <path
         class="Line"
-        d="M584 669.794C584 669.794 584 533.638 584 457.714C584 365.307 773 275.5 773 275.5"
-        stroke="#1572B6"
+        d="M331 446C331 353.5 137.5 268.5 137.5 268.5"
+        stroke="#E34F26"
         stroke-width="5"
         stroke-linecap="round"
         pathLength="1"></path>
       <path
         class="LineCover"
-        d="M584 669.794C584 669.794 584 533.638 584 457.714C584 365.307 773 275.5 773 275.5"
+        d="M331 446C331 353.5 137.5 268.5 137.5 268.5"
         stroke="#F3F4F6"
         stroke-width="10"
         stroke-linecap="round"
         pathLength="1"></path>
       <path
         class="Part1"
-        d="M775.5 272L778.882 239.151C778.944 238.544 779.53 238.134 780.122 238.284L819.39 248.219C819.977 248.368 820.299 249 820.072 249.562L806.229 283.931C806.088 284.28 805.764 284.521 805.389 284.554L789.356 285.969C789.126 285.989 788.896 285.929 788.705 285.799L778 278.5"
-        stroke="#1572B6"
+        d="M137.5 265.5L133.628 231.139C133.56 230.536 132.977 230.132 132.389 230.281L93.1101 240.219C92.5228 240.368 92.2015 241 92.4278 241.562L106.271 275.931C106.412 276.28 106.736 276.521 107.111 276.554L123.15 277.969C123.376 277.989 123.603 277.931 123.792 277.805L134 271"
+        stroke="#E34F26"
         stroke-width="5"
         stroke-linecap="round"
         pathLength="1"></path>
       <path
         class="Part2"
-        d="M788 251L806.24 255.437C806.33 255.459 806.345 255.58 806.263 255.623L792.224 262.884C792.143 262.926 792.155 263.044 792.242 263.069L802.392 265.969C802.45 265.986 802.48 266.048 802.457 266.103L799.024 274.443C799.009 274.478 798.976 274.502 798.938 274.504L792.031 274.998C792.011 274.999 791.991 274.995 791.973 274.984L786.05 271.529C786.019 271.511 786 271.478 786 271.443V269.5"
-        stroke="#1572B6"
+        d="M124.5 243L107.611 247.222C107.024 247.369 106.7 248.001 106.925 248.564L110.181 256.702C110.364 257.161 110.855 257.417 111.337 257.305L124.397 254.257C124.983 254.121 125.556 254.528 125.619 255.127L126.435 262.884C126.475 263.261 126.298 263.629 125.978 263.832L121.246 266.844C121.085 266.946 120.899 267 120.709 267H114.566C114.215 267 113.889 266.816 113.709 266.514L112.5 264.5"
+        stroke="#E34F26"
         stroke-width="5"
         stroke-linecap="round"
         pathLength="1"></path>
+    </g>
+    <g id="Circles">
+      <circle id="Ellipse 1" cx="331" cy="446" r="8" fill="#E34F26"></circle>
+      <circle id="Ellipse 2" cx="355" cy="446" r="8" fill="#3178C6"></circle>
+      <circle id="Ellipse 3" cx="379" cy="446" r="8" fill="#F7DF1E"></circle>
+      <circle id="Ellipse 4" cx="403" cy="446" r="8" fill="black"></circle>
+      <circle id="Ellipse 5" cx="427" cy="446" r="8" fill="#61DAFB"></circle>
+      <circle id="Ellipse 6" cx="451" cy="446" r="8" fill="#CC6699"></circle>
+      <circle id="Ellipse 7" cx="475" cy="446" r="8" fill="#1572B6"></circle>
     </g>
   </g>
 </svg>
