--- a/src/components/Projects.astro
+++ b/src/components/Projects.astro
@@ -1,12 +1,13 @@
 ---
 import ProjectsSvg from "./ProjectsSvg.astro";
 import ProjectCard from "../components/ProjectCard.astro";
+import ProjectsSvgOutro from "./ProjectsSvgOutro.astro";
 
 const projects = ["card1", "card2", "card3"];
 ---
 
 <section
-  class="relative mt-[220px] grid h-max min-h-[800px] w-full grid-rows-4 justify-center justify-items-center overflow-x-clip"
+  class="relative mt-[220px] grid h-max min-h-[800px] w-full grid-rows-3 justify-center justify-items-center overflow-x-clip"
 >
   <ProjectsSvg />
 
@@ -21,6 +22,8 @@ const projects = ["card1", "card2", "card3"];
       </div>
     ))
   }
+
+  <ProjectsSvgOutro />
 </section>
 
 <script>
