--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -18,7 +18,9 @@ const { title } = Astro.props;
     <meta name="generator" content={Astro.generator} />
     <title>{title}</title>
   </head>
-  <body class="flex flex-col items-center bg-gray-100 text-gray-600">
+  <body
+    class="grid grid-cols-1 justify-center justify-items-center bg-gray-100 text-gray-600"
+  >
     <Nav />
     <slot />
   </body>
