--- a/src/components/ProjectsSvg.astro
+++ b/src/components/ProjectsSvg.astro
@@ -1,5 +1,5 @@
 <div
-  class="pointer-events-none sticky z-50 top-0 col-start-1 col-end-1 row-start-1 grid w-screen justify-center"
+  class="pointer-events-none sticky top-0 z-50 col-start-1 col-end-1 row-start-1 grid w-full justify-center justify-items-center overflow-x-clip"
 >
   <div
     class="absolute top-[-220px] grid h-screen min-h-[800px] w-screen justify-center overflow-x-clip"
@@ -62,7 +62,7 @@
 
     <div
       id="projectsCurvedLines"
-      class="absolute top-[calc(50%-400px)] grid w-full justify-center"
+      class="absolute top-[calc(50%-400px)] grid w-full justify-center overflow-x-clip"
     >
       <svg
         width="1024"
@@ -123,7 +123,6 @@
       </svg>
     </div>
   </div>
-
 </div>
 
 <style>
@@ -177,5 +176,4 @@
       offset: ["end center", "end 0.48"],
     },
   );
-
-  </script>
+</script>
