--- a/src/components/ProjectCard.astro
+++ b/src/components/ProjectCard.astro
@@ -11,7 +11,7 @@ const { id } = Astro.props;
     marginTop: `${id * 20}px`,
     marginLeft: `${id * 20}px`,
   }}
-  class="grid h-[600px] w-full grid-cols-2 items-center gap-4 justify-self-center rounded-3xl bg-gray-100 px-4 shadow-2xl"
+  class="grid h-[600px] w-full grid-cols-2 items-center gap-4 justify-self-center rounded-3xl bg-gray-100 px-4 shadow-[rgba(149,157,165,0.2)_0px_8px_24px]"
 >
   <div
     class="flex h-60 w-96 flex-col justify-center gap-4 justify-self-end text-end"
