Update Header with new HeaderSvg

--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -1,5 +1,5 @@
 ---
-import HomeSvg from "../components/HomeSvg.astro";
+import HeaderSvg from "./HeaderSvg.astro";
 ---
 
 <header
@@ -40,5 +40,5 @@ import HomeSvg from "../components/HomeSvg.astro";
     </p>
   </div>
 
-  <HomeSvg />
+  <HeaderSvg />
 </header>
